deploy/tfslauncher/manifests/deviceservice.yaml
# Copyright 2022-2023 ETSI TeraFlowSDN - TFS OSG (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deviceservice
spec:
  selector:
    matchLabels:
      app: deviceservice
  replicas: 1
  template:
    metadata:
      annotations:
        # Required for IETF L2VPN SBI when both parent and child run in same K8s cluster with Linkerd
        config.linkerd.io/skip-outbound-ports: "8002"
      labels:
        app: deviceservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: labs.etsi.org:5050/tfs/controller/device:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2020
        - containerPort: 9192
        startupProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:2020"]
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:2020"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:2020"]
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: deviceservice
  labels:
    app: deviceservice
spec:
  type: ClusterIP
  selector:
    app: deviceservice
  ports:
  - name: grpc
    protocol: TCP
    port: 2020
    targetPort: 2020
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
