deploy/tfslauncher/manifests/pathcompservice.yaml
# Copyright 2022-2023 ETSI TeraFlowSDN - TFS OSG (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathcompservice
spec:
  selector:
    matchLabels:
      app: pathcompservice
  #replicas: 1
  template:
    metadata:
      labels:
        app: pathcompservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: frontend
        image: labs.etsi.org:5050/tfs/controller/pathcomp-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 10020
        - containerPort: 9192
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:10020"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:10020"]
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: backend
        image: labs.etsi.org:5050/tfs/controller/pathcomp-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        #readinessProbe:
        #  httpGet:
        #    path: /health
        #    port: 8081
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        #livenessProbe:
        #  httpGet:
        #    path: /health
        #    port: 8081
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pathcompservice
  labels:
    app: pathcompservice
spec:
  type: ClusterIP
  selector:
    app: pathcompservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10020
    targetPort: 10020
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
