deploy/tfslauncher/manifests/nginx_ingress_http.yaml
# Copyright 2022-2023 ETSI TeraFlowSDN - TFS OSG (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tfs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /webui(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: webuiservice
              port:
                number: 8004
        - path: /grafana(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: webuiservice
              port:
                number: 3000
        - path: /()(restconf/.*)
          pathType: Prefix
          backend:
            service:
              name: computeservice
              port:
                number: 8080
